--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
           <input type="file" name="avatar">
         </div>
         <label>
-          <input type="text" name="username" required
+          <input type="text" name="username"
+                minlength="2"
+                maxlength="25" required
                 class="setup-user-name" value="Синий Пендальф"/>
         </label>
       </div>
