--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
     return height * 1 / 3;
   };
 </script>
+<script src="js/backend.js"></script>
 <script src="js/stats.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/game.js"></script>
-
 </body>
 </html>
